--- a/html/music.html
+++ b/html/music.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Spencer Bushman Music</title>
 </head>
 
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <h1>Spencer Bushman Music</h1>
             <ul>
-                <li><a href="index.html">About</a></li>
+                <li><a href="../index.html">About</a></li>
                 <li><a href="./html/music.html">Music</a></li>
                 <li><a href="./html/contact.html">Contact</a><li>
             </ul>
