--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">About</a></li>
                 <li><a href="./html/music.html">Music</a></li>
-                <li><a href="./html/contact.html">Contact</a><li>
+                <li><a href="./html/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
