--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
         </nav>
     </header>
 
+    <main>
+        <section id="about">
+            <img src="./img/spencerbushmanprofile.png" alt="Profile Photo of Spencer Bushman">
+            <p>This is sample text. Spencer Bushman has a love of music. That love
+                started as a kid. His dad was a big fan of his music. Spencer love all
+                kinds of music. Pop, rock, country, everything literally under the sun.
+                Music is great.
+            </p>
+        </section>
+
+    </main>
+
 
     
 </body>
