--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
 
     <main>
         <section id="about">
-            <img src="./img/spencerbushmanprofile.png" alt="Profile Photo of Spencer Bushman">
-            <p>This is sample text. Spencer Bushman has a love of music. That love
-                started as a kid. His dad was a big fan of his music. Spencer love all
-                kinds of music. Pop, rock, country, everything literally under the sun.
-                Music is great.
-            </p>
+            <div>
+                <img src="./img/spencerbushmanprofile.png" alt="Profile Photo of Spencer Bushman" class="responsive" width="415" height="375">
+                <p>Spencer is a lover of the arts. Sports, literature, and music has driven his 
+                    life from the very beginning, much due to his parents love of similar passions.
+                </p>
+                <p>Spencer's father enjoys sports and the pop/rock side of music and his mother
+                    enjoys literature, writing and the classical side of music. From a very young
+                    age, Spencer's life has been influenced by music.
+                </p>
+                <p>With a presence in both his 
+                    junior high and high school choirs, that love of music has grown into a love of
+                    piano, which is one of his favorite aspecs of music, to composing and writing 
+                    his own songs. These passions have fueled his past, the present, and will affect 
+                    his future. 
+                </p>
+            </div>
         </section>
 
     </main>
