improved mobile phone

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                     enjoys literature, writing and the classical side of music. From a very young
                     age, Spencer's life has been influenced by music.
                 </p>
-                <p>With a presence in both his 
-                    junior high and high school choirs, that love of music has grown into a love of
+                <p>With a presence in both his junior high and high school choirs, that love of music has grown into a love of
                     piano, which is one of his favorite aspecs of music, to composing and writing 
                     his own songs. These passions have fueled his past, the present, and will affect 
                     his future. 
