--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Spencer Bushman Music</title>
 </head>
 
@@ -37,8 +38,20 @@
                 </p>
             </div>
         </section>
-
     </main>
+
+    <footer>
+        <section class="socialmedia">
+            <a href="https://www.facebook.com/spencer.bushman.7" class="fa fa-facebook" target="_blank"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-youtube"></a>
+            <a href="https://www.instagram.com/spencerbushman11/?igshid=YmMyMTA2M2Y=" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-spotify"></a>
+        </section>
+        <section class="designed">
+            <p>Designed and created by Benjamin Bushman</p>
+        </section>
+    </footer>
 
 
     
