--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>With a presence in both his junior high and high school choirs, that love of music has grown into a love of
                     piano, which is one of his favorite aspecs of music, to composing and writing 
                     his own songs. These passions have fueled his past, the present, and will affect 
-                    his future. 
+                    his future. TEST
                 </p>
             </div>
         </section>
