--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Spencer Bushman Music</title>
 </head>
@@ -23,7 +23,7 @@
     <main>
         <section id="about">
             <div>
-                <img src="./img/spencerbushmanprofile.png" alt="Profile Photo of Spencer Bushman" class="responsive" width="415" height="375">
+                <img src="./assets/img/spencerbushmanprofile.png" alt="Profile Photo of Spencer Bushman" class="responsive" width="415" height="375">
                 <p>Spencer is a lover of the arts. Sports, literature, and music has driven his 
                     life from the very beginning, much due to his parents love of similar passions.
                 </p>
@@ -39,6 +39,10 @@
             </div>
         </section>
     </main>
+
+    <audio src="./assets/audio/Give Me a Chance by Spencer Bushman.mp3" controls>
+        <p>If you are reading this, it is because your browser does not support the audio element.</p>
+        </audio>
 
     <footer>
         <section class="socialmedia">
