--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <header class="container">
+    <header class="containerheader">
         <nav class="navbar">
             <h1>Spencer Bushman Music</h1>
             <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="./html/music.html">Music</a></li>
+                <li><a href="../Spencer-Bushman-Music/index.html">About</a></li>
+                <li><a href="assets/html/music.html">Music</a></li>
                 <li><a href="./html/contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -40,9 +40,7 @@
         </section>
     </main>
 
-    <audio src="./assets/audio/Give Me a Chance by Spencer Bushman.mp3" controls>
-        <p>If you are reading this, it is because your browser does not support the audio element.</p>
-        </audio>
+    
 
     <footer>
         <section class="socialmedia">
