--- a/assets/html/music.html
+++ b/assets/html/music.html
@@ -1,25 +1,41 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Spencer Bushman Music</title>
 </head>
 
 <body>
-    <header class="container">
+    <header class="containerheader">
         <nav class="navbar">
             <h1>Spencer Bushman Music</h1>
             <ul>
-                <li><a href="../index.html">About</a></li>
+                <li><a href="/Archive/Spencer-Bushman-Music/index.html">About</a></li>
                 <li><a href="./html/music.html">Music</a></li>
-                <li><a href="./html/contact.html">Contact</a><li>
+                <li><a href="./html/contact.html">Contact</a>
+                <li>
             </ul>
         </nav>
     </header>
 
-
-    
+    <section class="container">
+        <div class="col-sm-12 col-md-6">
+            <h2 >Give Me a Chance</h2>
+            <audio src="../audio/Give Me a Chance by Spencer Bushman.mp3" controls>
+                <p>If you are reading this, it is because your browser does not support the audio element.</p>
+            </audio>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <h2>Give Me a Chance</h2>
+            <audio src="../audio/Give Me a Chance by Spencer Bushman.mp3" controls>
+                <p>If you are reading this, it is because your browser does not support the audio element.</p>
+            </audio>
+        </div>
+    </section>
 </body>
+
 </html>
