added more music options and contact sheet

--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Spencer Bushman Music</title>
 </head>
 
 <body>
-    <header class="containerheader">
+    <header class="containerheader m-0">
         <nav class="navbar">
             <h1>Spencer Bushman Music</h1>
             <ul>
                 <li><a href="../Spencer-Bushman-Music/index.html">About</a></li>
-                <li><a href="assets/html/music.html">Music</a></li>
-                <li><a href="./html/contact.html">Contact</a></li>
+                <li><a href="./assets/html/music.html">Music</a></li>
+                <li><a href="./assets/html/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="about">
-            <div>
-                <img src="./assets/img/spencerbushmanprofile.png" alt="Profile Photo of Spencer Bushman" class="responsive" width="415" height="375">
+            <div class="m-4">
+                <img src="./assets/img/spencerbushmanprofile.png" alt="Profile Photo of Spencer Bushman" class="responsive mr-4" width="415" height="375">
                 <p>Spencer is a lover of the arts. Sports, literature, and music has driven his 
                     life from the very beginning, much due to his parents love of similar passions.
                 </p>
@@ -34,27 +35,11 @@
                 <p>With a presence in both his junior high and high school choirs, that love of music has grown into a love of
                     piano, which is one of his favorite aspecs of music, to composing and writing 
                     his own songs. These passions have fueled his past, the present, and will affect 
-                    his future. TEST
+                    his future.
                 </p>
             </div>
         </section>
     </main>
-
-    
-
-    <footer>
-        <section class="socialmedia">
-            <a href="https://www.facebook.com/spencer.bushman.7" class="fa fa-facebook" target="_blank"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-youtube"></a>
-            <a href="https://www.instagram.com/spencerbushman11/?igshid=YmMyMTA2M2Y=" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-spotify"></a>
-        </section>
-        <section class="designed">
-            <p>Designed and created by Benjamin Bushman</p>
-        </section>
-    </footer>
-
 
     
 </body>
