--- a/assets/html/music.html
+++ b/assets/html/music.html
@@ -24,79 +24,79 @@
 
     <section class="container">
         <div class="row">
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">Give Me a Chance</h3>
                 <audio src="../audio/Give Me a Chance by Spencer Bushman rev. 2.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">Magical</h3>
                 <audio src="../audio/ Magical by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">Blow My Mind</h3>
                 <audio src="../audio/Blow My Mind by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">Breath</h3>
                 <audio src="../audio/Breath by Spencer Bushman rev. 2.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">Close</h3>
                 <audio src="../audio/Close by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">Cross that Line</h3>
                 <audio src="../audio/Cross That Line by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">If the Day Comes</h3>
                 <audio src="../audio/If the Day Comes by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">Invisible</h3>
                 <audio src="../audio/Invisible by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">Kiss you in the Rain</h3>
                 <audio src="../audio/Kiss You in the Rain by Spencer Bushman rev. 2.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">People Always Leave</h3>
                 <audio src="../audio/People Always Leave by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">The Sad Song</h3>
                 <audio src="../audio/The Sad Song by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">This Place</h3>
                 <audio src="../audio/This Place by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
-            <div class="my-3 col-4">
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">Time Travel</h3>
                 <audio src="../audio/Time Travel by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
