Added new songs

--- a/assets/html/music.html
+++ b/assets/html/music.html
@@ -16,8 +16,7 @@
             <ul>
                 <li><a href="../../index.html">About</a></li>
                 <li><a href="./music.html">Music</a></li>
-                <li><a href="./contact.html">Contact</a>
-                <li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -99,6 +98,18 @@
             <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
                 <h3 class="">Time Travel</h3>
                 <audio src="../audio/Time Travel by Spencer Bushman.wav" controls controlsList="nodownload">
+                    <p>If you are reading this, it is because your browser does not support the audio element.</p>
+                </audio>
+            </div>
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
+                <h3 class="">What Happened</h3>
+                <audio src="../audio/What Happened by Spencer Bushman.wav" controls controlsList="nodownload">
+                    <p>If you are reading this, it is because your browser does not support the audio element.</p>
+                </audio>
+            </div>
+            <div class="text-center my-3 col-12 col-md-4 col-lg-4 col-xl-4 col-sm-12">
+                <h3 class="">Searching for You</h3>
+                <audio src="../audio/Searching for You by Spencer Bushman.wav" controls controlsList="nodownload">
                     <p>If you are reading this, it is because your browser does not support the audio element.</p>
                 </audio>
             </div>
