--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -17,8 +17,7 @@
             <ul>
                 <li><a href="../../index.html">About</a></li>
                 <li><a href="./music.html">Music</a></li>
-                <li><a href="./contact.html">Contact</a>
-                <li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
